@@ -1,12 +1,10 @@
 package com.sentrysoftware.matrix.converter.state.computes.json2csv;
 
-import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
 import com.sentrysoftware.matrix.converter.state.IConnectorStateConverter;
 import com.sentrysoftware.matrix.converter.state.computes.common.ComputeTypeProcessor;
+import com.sentrysoftware.matrix.converter.state.computes.common.PropertiesProcessor;
+import com.sentrysoftware.matrix.converter.state.computes.common.SeparatorProcessor;
 
 import lombok.AccessLevel;
 import lombok.NoArgsConstructor;
@@ -14,10 +12,15 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor(access = AccessLevel.PRIVATE)
 public class ConnectorJson2CsvProperty {
 
-	private static final String HDF_TYPE_VALUE = "";
-	private static final String YAML_TYPE_VALUE = "";
+	private static final String HDF_TYPE_VALUE = "Json2Csv";
+	private static final String YAML_TYPE_VALUE = "json2csv";
 
 	public static Set<IConnectorStateConverter> getConnectorProperties() {
-		return Collections.emptySet();
+		return Set.of(
+			new ComputeTypeProcessor(HDF_TYPE_VALUE, YAML_TYPE_VALUE),
+			new EntryKeyProcessor(),
+			new PropertiesProcessor(),
+			new SeparatorProcessor()
+		);
 	}
 }
